mudanças de design #1

--- a/ITBI/ITBI/frontend/index.html
+++ b/ITBI/ITBI/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Brasília International Church</title>
+  <title>Restitua já!</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -64,15 +64,10 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+    <a href="index.html" class="scrollto"><img src="assets/img/teste.jpg" alt="" title=""></a>
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">ITBI<br><span>Vamos</span> Restituir</h1>
       <p class="mb-4 pb-0">Imposto de Transmissão de Imóveis</p>
-     <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/COH4_2tm-E8?autoplay=1" title="Welcome" frameborder="0" allow="accelerometer; autoplay; clipboard-write; gyroscope; picture-in-picture"></iframe> -->
-      <iframe id="youtube" width="360" height="300" src="https://www.youtube.com/embed/COH4_2tm-E8?autoplay=1"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; gyroscope; picture-in-picture">      </iframe>
-     <!-- <video weeheight="315" controls autoplay>
-        <sourcee src="https://www.youtube.com/embed/COH4_2tm-E8" type="video">c
-      </video>    -->
-      <!--<a href="#about" class="about-btn scrollto">About us</a>-->
     </div>
   </section><!-- End Hero Section -->
 
@@ -322,8 +317,8 @@
 
           <div class="col-md-4">
             <div class="contact-address">
-              <i class="bi bi-geo-alt"></i>
-              <h3>Endereço </h3>
+              <j class="bi bi-geo-alt"></j>
+              <h1>Endereço </h1>
               <address>QL 16 casa 12 Lago norte, Brasília-DF, CEP</address>
             </div>
           </div>
@@ -331,15 +326,15 @@
           <div class="col-md-4">
             <div class="contact-phone">
               <i class="bi bi-whatsapp"></i>
-              <h3>Telefone</h3>
+              <h1>Telefone</h1>
               <p><a href="">WhatsApp</a></p>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-email">
-              <i class="bi bi-instagram"></i>
-              <h3>Instagram</h3>
+              <k class="bi bi-instagram"></k>
+              <h1>Instagram</h1>
               <p><a href="https://www.instagram.com/botafogo">Instagram</a></p>
             </div>
           </div>
