sobre nós centralizado

--- a/ITBI/ITBI/frontend/index.html
+++ b/ITBI/ITBI/frontend/index.html
@@ -77,24 +77,9 @@
     <section id="about">
       <div class="container" data-aos="fade-up">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="center">
             <h2>Sobre Nós</h2>
             <p>Somos uma empresa de restituição de créditos tributários recolhidos indevidamente pelos Estados da União.</p>
-          </div>
-
-          <div class="col-lg-6">
-            <h2>Sobre Nosotros</h2>
-            <p>Brasília International Church tiene como objetivo principal atender las necesidades de la gran comunidad de inmigrantes para proporcionar un lugar de adoración a Dios y de predicación del evangelio en el idioma inglés.</p>
-          </div>
-
-         
-          <div class="col-lg-3">
-            <h3>Where?</h3>
-            <p>CEAMA Auditorium</p>
-          </div>
-          <div class="col-lg-3">
-            <h3>When?</h3>
-            <p>Every Sabbath<br>9:00 AM</p>
           </div>
         </div>
       </div>
