--- a/ITBI/ITBI/frontend/index.html
+++ b/ITBI/ITBI/frontend/index.html
@@ -66,7 +66,10 @@
   <section id="hero">
     <a href="index.html" class="scrollto"><img src="assets/img/teste.jpg" alt="" title=""></a>
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 class="mb-4 pb-0">ITBI<br><span>Vamos</span> Restituir</h1>
+      <div class="itbi_img">
+      <img src="assets/img/itbi3.png" alt="" title="">
+      </div>
+      <h1 class="mb-4 pb-0"><br><span>Vamos</span> Restituir</h1>
       <p class="mb-4 pb-0">Imposto de Transmissão de Imóveis</p>
     </div>
   </section><!-- End Hero Section -->
